新增回到顶部功能

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -17,5 +17,6 @@
     <%- partial('_partial/header') %>
     <%- body %>
     <%- partial('_partial/footer') %>
+    <%- partial('_partial/back-top') %>
 </body>
 </html>
