新增主题切换功能

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -17,6 +17,8 @@
     <%- partial('_partial/header') %>
     <%- body %>
     <%- partial('_partial/footer') %>
+
+    <%- partial('_partial/theme-settings') %>
     <%- partial('_partial/back-top') %>
 </body>
 </html>
