新增搜索查询功能

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -29,4 +29,6 @@
         <link rel="stylesheet" href="<%= url %>">
         <% }); %>
     <% } %>
+
+    <script src="/libs/jquery/jquery-2.2.0.min.js"></script>
 </head>
