--- a/layout/_partial/navigation.ejs
+++ b/layout/_partial/navigation.ejs
@@ -13,10 +13,11 @@
         <% } %>
     <% }); %>
     <li>
-        <a href="#!" id="toggle-search" class="waves-effect waves-light">
+        <a id="toggleSearch" class="waves-effect waves-light">
             <i id="searchIcon" class="mdi-action-search"></i>
         </a>
     </li>
+    
 </ul>
 
 <%- partial('_partial/mobile-nav') %>
