--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -18,6 +18,7 @@
     <%- body %>
     <%- partial('_partial/footer') %>
 
+    <%- partial('_partial/search') %>
     <%- partial('_partial/theme-settings') %>
     <%- partial('_partial/back-top') %>
 </body>
