--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -73,10 +73,10 @@ hr {
 }
 
 blockquote {
-    border-left: 5px solid #27ae60;
+    border-left: 5px solid #42b983;
     padding: 0.9rem 0.8rem 0.4rem 0.8rem;
     color: #777;
-    background-color: #f1f8e9;
+    background-color: rgba(66,185,131,.1);
 }
 
 pre {
@@ -89,11 +89,11 @@ pre {
 }
 
 code {
-    padding: 1px 4px;
-    font-size: 0.92rem;
-    color: #c0341d;
-    background-color: #fcefed;
-    border-radius: 3px;
+    padding: 1px 5px;
+    font-size: 0.91rem;
+    color: #e96900;
+    background-color: #f8f8f8;
+    border-radius: 2px;
 }
 
 pre code {
@@ -424,6 +424,7 @@ article .article-tags .chip {
 
 #artDetail .author-info span {
     margin-right: 30px;
+    color: #525f7f;
 }
 
 #artDetail .article-card-content {
@@ -442,7 +443,7 @@ article .article-tags .chip {
 }
 
 #artDetail .reprint a {
-    color: #42b983;
+    color: #039be5;
     font-weight: 500;
 }
 
@@ -456,11 +457,11 @@ article .article-tags .chip {
 }
 
 .prenext-card .prenext-row {
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .prenext-card .prenext {
-    padding-left: 20px;
+    /* padding-left: 20px; */
     margin-bottom: 15px;
 }
 
@@ -479,14 +480,16 @@ article .article-tags .chip {
 }
 
 #articleContent a {
-    color: #0e83cd !important;
+    color: #42b983 !important;
     font-weight: 500;
+    text-decoration: underline;
 }
 
 #articleContent ol,
 ul {
     display: block;
     padding-left: 2em;
+    word-spacing: 0.05rem;
 }
 
 #articleContent ul li,
@@ -502,6 +505,24 @@ ol li {
 
 #articleContent ul ul li {
     list-style-type: circle;
+}
+
+#articleContent table, th, td {
+    padding: 12px 13px;
+    border: 1px solid #dfe2e5;
+}
+
+table tr:nth-child(2n), thead {
+    background-color: #fafafa;
+}
+
+#articleContent table th {
+    background-color: #f2f2f2;
+    min-width: 80px;
+}
+
+#articleContent table td {
+    min-width: 80px;
 }
 
 #tags .tag-chips {
@@ -835,7 +856,7 @@ footer a {
 }
 
 footer .copy-right {
-    color: #bbb;
+    color: #ccc;
 }
 
 /*搜索层样式*/
