--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col s12 m12 l12">
                     <h3 class="heading">
-                    <% if (config.description !== undefined && config.description.length > 0) { %>
+                    <% if (config.description && config.description.length > 0) { %>
                         <%= config.description %>
                     <% } else { %>
                         从来没有真正的绝境，只有心灵的迷途
