--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -9,11 +9,6 @@
     </div>
 </div>
 
-<script type="text/javascript">      
-    var search_path = "<%= config.search.path %>";
-    if (search_path.length == 0) {
-        search_path = "search.xml";
-    }
-    var path = "<%= config.root %>" + search_path;
-    searchFunc(path, 'searchInput', 'searchResult');
+<script type="text/javascript">
+    searchFunc("<%= config.root %>" + "search.xml", 'searchInput', 'searchResult');
 </script>
